samples/_failures_safe/1761308820_be8eb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2b3fdbb.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_b2b3fdbb.c:150:24: error: missing terminating " character
  150 |                 printf("String:
      |                        ^~~~~~~~
./samples/SAFE/__tmp_b2b3fdbb.c:150:17: error: expected expression at end of input
  150 |                 printf("String:
      |                 ^~~~~~
./samples/SAFE/__tmp_b2b3fdbb.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2b3fdbb.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2b3fdbb.c:150:17: error: expected declaration or statement at end of input
